# convertarr

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  TODO  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  run.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docker.yml
src/convertarr/: config.py  db.py  main.py  models.py  workflows.py
src/convertarr/arr/: client.py  paths.py  radarr.py  sonarr.py
src/convertarr/encode/: hwdetect.py  plan.py  runner.py
src/convertarr/probe/: codec_labels.py  ffprobe.py  policy.py
src/convertarr/web/: auth.py  auth_routes.py  filters.py  node_routes.py  pairing_routes.py  routes.py  runtime_settings.py  sort.py  system_routes.py
src/convertarr/web/static/: app.css  filters.js  lazy_posters.js  select.js  toasts.js  workflow_editor.js
src/convertarr/web/templates/: _app_log_tail.html  _arr_instance_card.html  _bulk_footer.html  _dashboard_running.html  _filter_menu.html  _queue_rows.html  _select_toolbar.html  _sort_menu.html  base.html  dashboard.html  history.html  login.html  movie_detail.html  movies_list.html  queue.html  series_detail.html  series_list.html  settings_general.html  settings_nodes.html  settings_radarr.html  settings_sonarr.html  settings_workflow_edit.html  (+6 more)
src/convertarr/worker/: __init__.py  cli.py  client.py  config.py  loop.py
src/convertarr/workers/: cleanup.py  execution.py  heartbeat.py  indexer.py  ingest.py  local_node.py  queue.py  supervisor.py
