[project]
name = "convertarr"
version = "1.0.4"
description = "Sonarr-style daemon that pre-converts Jellyfin-incompatible media into a direct-play codec set."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
    "bcrypt>=4.2",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[project.scripts]
convertarr = "convertarr.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/convertarr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
